--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
-              <img src="assets/img/SIPFAA_White.png" alt="" class="img-fluid">
+              <img src="assets/img/members/IT10917334.png" alt="" class="img-fluid">
               <h4><a href="">Bandara W.A.I.U</a></h4>
               <h5>IT19017334</h5>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
@@ -144,7 +144,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
+              <img src="assets/img/members/IT19016108.jpg" alt="" class="img-fluid">
               <h4><a href="">Alwis T.A.D.T.N.D.</a></h4>
               <h5>IT19016108</h5>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
@@ -153,7 +154,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
+              <img src="assets/img/members/IT19026480.jpg" alt="" class="img-fluid">
               <h4><a href="">Maduwantha N.N.D.</a></h4>
               <h5>IT19026480</h5>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
@@ -162,7 +164,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-file"></i></div>
+              <!-- <div class="icon"><i class="bx bx-file"></i></div> -->
+              <img src="assets/img/members/IT19028156.jpg" alt="" class="img-fluid">
               <h4><a href="">Kuruppuarachchi K.A.D.K.S.</a></h4>
               <h5>IT19028156</h5>
               <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
@@ -171,7 +174,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <!-- <div class="icon"><i class="bx bx-slideshow"></i></div> -->
+              <img src="assets/img/members/Udara_Samaratunge.jfif" alt="" class="img-fluid">
               <h4><a href="">Udara Samaratunge</a></h4>
               <h5>Supervisor</h5>
               <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
@@ -180,7 +184,8 @@
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
-              <div class="icon"><i class="bx bx-slideshow"></i></div>
+              <!-- <div class="icon"><i class="bx bx-slideshow"></i></div> -->
+              <img src="assets/img/members/Thilmi_Kuruppu.jfif" alt="" class="img-fluid">
               <h4><a href="">Thilmi Anuththara Kuruppu</a></h4>
               <h5>Co-Supervisor</h5>
               <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
