--- a/index.html
+++ b/index.html
@@ -76,20 +76,21 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About Us</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <h2>About SIPFAA</h2>
+          <p align="justify">Pineapple is a perennial climber that grows well in Sri Lanka's low country wet and intermediate zones. The proposed solution is required to use machine learning technology to diagnose diseases related to pineapple and a knowledge base intelligent chatbot to provide remedies for the diseases. 
+            It is required to provide a farmer-to-consumer direct communication platform based on the nearest location including requirements optimization. Further, a product differentiation plan to maximize the profit of farmer by analyzing the trends of market must be included.</p>
         </div>
 
         <div class="row content">
           <div class="col-lg-6">
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
+            <p align="justify">
+              This smart intelligent pineapple farming assistant agent mobile application guides the user on four main problems related to the pineapple cultivation.  Namely, 
             </p>
             <ul>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
-              <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit</li>
-              <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat</li>
+              <li><i class="ri-check-double-line"></i> Difficulty in identification of Diseases and Pest Attacks.</li>
+              <li><i class="ri-check-double-line"></i> Difficulty in identification of the remedies for the diseases.</li>
+              <li><i class="ri-check-double-line"></i> Lack of a Buyer-Seller interaction platform for requirements optimization.</li>
+              <li><i class="ri-check-double-line"></i> Knowledge dissemination gap regarding the product differentiation plan to maximize the profit of farmer according to the trends of the market.</li>
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
@@ -98,7 +99,7 @@
               velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
               culpa qui officia deserunt mollit anim id est laborum.
             </p>
-            <a href="#" class="btn-learn-more">Learn More</a>
+            <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
           </div>
         </div>
     </section><!-- End About Us Section -->
@@ -108,7 +109,7 @@
       <div class="container">
         <div class="section-title">
           <h2>Project Team</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
@@ -195,14 +196,14 @@
 
         <div class="section-title">
           <h2>Documents</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Project Charter Document</a></h4>
+              <h4><a href="https://drive.google.com/file/d/1mzztYHBSakYzTtl1LDTrcnm4BbE7ajp9/view?usp=sharing" target="_blank">Project Charter Document</a></h4>
               <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
             </div>
           </div>
@@ -210,7 +211,7 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Project Proposal</a></h4>
+              <h4><a href="https://drive.google.com/drive/folders/1DOqSN7dENJQMuYmjEbV8CAPr-uG3EEAi?usp=sharing">Project Proposal</a></h4>
               <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
             </div>
           </div>
@@ -219,7 +220,7 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="">Research Paper</a></h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
+              <p>A paper with an essay that has been broadened to include the author's own analysis, judgment, original investigations, and results.</p>
             </div>
           </div>
 
@@ -276,24 +277,24 @@
         <div class="row">
           <div class="col-lg-6 order-2 order-lg-1">
             <div class="icon-box mt-5 mt-lg-0">
-              <i class="bx bx-receipt"></i>
+              <i class="bx bx-bug"></i>
               <h4>Pineapple Disease/Pest Attack Identification</h4>
-              <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+              <p align="justify">The main objective of this research study is to implement a common platform as a mobile application to assist farmers in diagnosing diseases and pest attacks with their fingertips.</p>
             </div>
             <div class="icon-box mt-5">
-              <i class="bx bx-cube-alt"></i>
+              <i class="bi bi-robot"></i>
               <h4>Knowledge Based Expert Conversational AI</h4>
-              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+              <p align="justify">Provide an expert solution for farmers by addressing the time constraint in contacting specialist agricultural authorities for the remedial actions to be taken for pineapple diseases and pest attacks.</p>
             </div>
             <div class="icon-box mt-5">
-              <i class="bx bx-images"></i>
+              <i class="bi bi-person-fill"></i>
               <h4>Wholesale Buyer-Farmer Interaction Platform</h4>
-              <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+              <p align="justify">Construct Wholesale Buyer-Farmer interaction platform for requirement optimization using Artificial Intelligent based optimization by considering on nearest buyer or seller location, harvest quantity as well as pineapple quality.</p>
             </div>
             <div class="icon-box mt-5">
-              <i class="bx bx-shield"></i>
+              <i class="bi bi-shop"></i>
               <h4>Product/Market Differentiation Plan</h4>
-              <p>Expedita veritatis consequuntur nihil tempore laudantium vitae denat pacta</p>
+              <p align="justify">Generate product/market differentiation plan with decision supportive approach to maximize the profit of farmer by analyzing the trend of market according to the harvested season, fruit quality, quantity and cost.</p>
             </div>
           </div>
           <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/features.jpg");'></div>
@@ -403,7 +404,7 @@
 
         <div class="section-title">
           <h2>Pricing</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>SIPFAA is the SMART way to achieve your business goals. Dont wait.. Try below latest pricing strategies</p>
         </div>
 
         <div class="row">
@@ -427,7 +428,7 @@
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="box">
               <h3>Basic</h3>
-              <h4><sup>$</sup>10<span> / year</span></h4>
+              <h4><sup>$</sup>9.99<span> / year</span></h4>
               <ul>
                 <li>Disease Detection</li>
                 <li>Suggest remedies</li>
