document_links_finalized

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p align="justify">
-              This smart intelligent pineapple farming assistant agent mobile application guides the user on four main problems related to the pineapple cultivation.  Namely, 
+              This Smart Intelligent Pineapple Farming Assistant Agent mobile application guides the user on four main problems related to the pineapple cultivation.  Namely, 
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Difficulty in identification of Diseases and Pest Attacks.</li>
@@ -94,10 +94,8 @@
             </ul>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
+            <p align="justify">
+              SIPFAA is working as a separate human counterpart to assist the pineapple farmers in a smart manner. For the future work, the team is planning to increase the quality and quantity of the dataset and refine the CNN model as well as the knowledge base with more domain knowledge.
             </p>
             <!-- <a href="#" class="btn-learn-more">Learn More</a> -->
           </div>
@@ -204,22 +202,22 @@
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
               <h4><a href="https://drive.google.com/file/d/1mzztYHBSakYzTtl1LDTrcnm4BbE7ajp9/view?usp=sharing" target="_blank">Project Charter Document</a></h4>
-              <p>Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi</p>
+              <p>The project charter document outlines the project's goals, stakeholders, risks, available resources, and dependencies.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="https://drive.google.com/drive/folders/1DOqSN7dENJQMuYmjEbV8CAPr-uG3EEAi?usp=sharing">Project Proposal</a></h4>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore</p>
+              <h4><a href="https://drive.google.com/drive/folders/1DOqSN7dENJQMuYmjEbV8CAPr-uG3EEAi?usp=sharing" target="_blank">Project Proposal</a></h4>
+              <p>The document that succinctly outlines the goals of the project, why those goals are significant, and how researchers plan to get there.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Research Paper</a></h4>
+              <h4><a href="https://drive.google.com/file/d/1P3Gwp15JYr5m16wTqQLlZDaQPeBFWUDZ/view?usp=sharing" target="_blank">Research Paper</a></h4>
               <p>A paper with an essay that has been broadened to include the author's own analysis, judgment, original investigations, and results.</p>
             </div>
           </div>
@@ -227,24 +225,24 @@
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-file"></i></div>
-              <h4><a href="">Final Report</a></h4>
-              <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
+              <h4><a href="https://drive.google.com/drive/folders/1EzM3iZkQaZwShOh60RXZ36-ArOD87YyJ?usp=sharing" target="_blank">Final Report</a></h4>
+              <p>The report, which included the final outcome of the project.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Progress Presentation 1</a></h4>
-              <p>Quis consequatur saepe eligendi voluptatem consequatur dolor consequuntur</p>
+              <h4><a href="https://docs.google.com/presentation/d/1JiTvKOMrAgGcDpqZmIf5qUgmbsfeSXRS/edit?usp=sharing&ouid=108373389795701268565&rtpof=true&sd=true" target="_blank">Progress Presentation 1</a></h4>
+              <p>Presentation that describes 50% completion of each individual component.</p>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
             <div class="icon-box">
               <div class="icon"><i class="bx bx-slideshow"></i></div>
-              <h4><a href="">Progress Presentation 2</a></h4>
-              <p>Modi nostrum vel laborum. Porro fugit error sit minus sapiente sit aspernatur</p>
+              <h4><a href="https://docs.google.com/presentation/d/143n_dK5OfOvMewypbKjE5Ie3xz5JWpzq/edit?usp=share_link&ouid=108373389795701268565&rtpof=true&sd=true" target="_blank">Progress Presentation 2</a></h4>
+              <p>Presentation that describes 90% completion of each individual component.</p>
             </div>
           </div>
 
@@ -404,7 +402,7 @@
 
         <div class="section-title">
           <h2>Pricing</h2>
-          <p>SIPFAA is the SMART way to achieve your business goals. Dont wait.. Try below latest pricing strategies</p>
+          <p>SIPFAA is the SMART way to achieve your business goals. Don't wait... Try below latest pricing strategies</p>
         </div>
 
         <div class="row">
