project_timeline_added

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
               <p align="justify">Generate product/market differentiation plan with decision supportive approach to maximize the profit of farmer by analyzing the trend of market according to the harvested season, fruit quality, quantity and cost.</p>
             </div>
           </div>
-          <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/features.jpg");'></div>
+          <div class="image col-lg-6 order-1 order-lg-2" style='background-image: url("assets/img/components.jpg");'></div>
         </div>
 
       </div>
@@ -363,36 +363,121 @@
     <!-- ======= Counts Section ======= -->
     <section id="counts" class="counts">
       <div class="container">
+          <!-- Section: Timeline -->
+          <section class="py-5">
+            <ul class="timeline-with-icons">
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Project Discussion Workshop</h5>
+                <p class="text fw-bold">05<sup>th</sup> November 2021</p>
+                <p class="text">
+                  In this workshop, the necessary details regarding the research project and details regarding the supervisor selection was discussed.
+                </p>
+              </li>
 
-        <div class="text-center title">
-          <h3>What we have achieved so far</h3>
-          <p>Iusto et labore modi qui sapiente xpedita tempora et aut non ipsum consequatur illo.</p>
-        </div>
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Research Topic Evaluation</h5>
+                <p class="text fw-bold">28<sup>th</sup> December 2021</p>
+                <p class="text">
+                  The selected Research Topic was evaluated by the CDAP team.
+                </p>
+              </li>
 
-        <div class="row counters position-relative">
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Project Charter and Cover Sheet Submission</h5>
+                <p class="text fw-bold">12<sup>th</sup> January 2022</p>
+                <p class="text">
+                  The project charter and the cover sheet was submitted to the CDAP team. This outlines the project's goals, stakeholders, risks and dependencies.
+                </p>
+              </li>
+              
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Project Proposal Submission</h5>
+                <p class="text fw-bold">24<sup>th</sup> January 2022</p>
+                <p class="text">
+                  Project Proposal was submitted to the CDAP team by mentioning the selected methodologies and results of the feasibility study.
+                </p>
+              </li>
+              
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Project Proposal Presentation</h5>
+                <p class="text fw-bold">2<sup>nd</sup> February 2022</p>
+                <p class="text">
+                  Project Proposal was presented to the Research Panel members to convince the idea of the overall project and obtained the approval for the contiuation.
+                </p>
+              </li>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Clients</p>
-          </div>
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Progress Presentation 01</h5>
+                <p class="text fw-bold">12<sup>th</sup> May 2022</p>
+                <p class="text">
+                  The project charter and the cover sheet was submitted to the CDAP team. This outlines the project's goals, stakeholders, risks and dependencies.
+                </p>
+              </li>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Projects</p>
-          </div>
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Research Paper Submission</h5>
+                <p class="text fw-bold">30<sup>th</sup> June 2022</p>
+                <p class="text">
+                  The project charter and the cover sheet was submitted to the CDAP team. This outlines the project's goals, stakeholders, risks and dependencies.
+                </p>
+              </li>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hours Of Support</p>
-          </div>
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Final Report Draft Submission</h5>
+                <p class="text fw-bold">9<sup>th</sup> September 2022</p>
+                <p class="text">
+                  The project charter and the cover sheet was submitted to the CDAP team. This outlines the project's goals, stakeholders, risks and dependencies.
+                </p>
+              </li>
 
-          <div class="col-lg-3 col-6 text-center">
-            <span data-purecounter-start="0" data-purecounter-end="15" data-purecounter-duration="1" class="purecounter"></span>
-            <p>Hard Workers</p>
-          </div>
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Progress Presentation 02</h5>
+                <p class="text fw-bold">11<sup>th</sup> October 2022</p>
+                <p class="text">
+                  The project charter and the cover sheet was submitted to the CDAP team. This outlines the project's goals, stakeholders, risks and dependencies.
+                </p>
+              </li>
 
-        </div>
-
+              <li class="timeline-item mb-5">
+                <span class="timeline-icon">
+                  <i class="fas fa-rocket text-primary fa-sm fa-fw"></i>
+                </span>
+                <h5 class="text fw-bold">Final Presentation and Viva</h5>
+                <p class="text fw-bold">14<sup>th</sup> December 2022</p>
+                <p class="text">
+                  The project charter and the cover sheet was submitted to the CDAP team. This outlines the project's goals, stakeholders, risks and dependencies.
+                </p>
+              </li>
+            </ul>
+          </section>
+          <!-- Section: Timeline -->
       </div>
     </section><!-- End Counts Section -->
 
@@ -641,5 +726,4 @@
   <script src="assets/js/main.js"></script>
 
 </body>
-
 </html>
